force-app/main/default/objects/Analytics_Model__c/fields/Stage_at_Model_Creation__c.field-meta.xml
<CustomField>
    <fullName>Stage_at_Model_Creation__c</fullName>
    <description>AUTO - Populated at time of creation in Screen Flow.</description>
    <label>Stage at Model Creation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>