force-app/main/default/objects/Analytics_Model__c/fields/Stage_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Stage_Start_Time__c</fullName>
    <label>Stage_Start_Time</label>
    <type>DateTime</type>
</CustomField>