force-app/main/default/objects/Analytics_Model__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <formula>Time_taken_to_Ready_for_Review__c &lt;=  Expected_SLA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>