force-app/main/default/objects/Analytics_Model__c/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <label>Tariff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>