force-app/main/default/objects/Analytics_Model__c/fields/Time_Spent_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_in_Stage__c</fullName>
    <label>Time Spent in Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>