force-app/main/default/objects/Analytics_Model__c/fields/Time_taken_to_Ready_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_to_Ready_for_Review__c</fullName>
    <formula>(Time_Spent_in_To_Do__c  +  Time_Spent_in_Ready_for_Analysis__c  +  Time_Spent_in_Analysis__c + Time_Spent_in_Validation__c) / 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days taken to reach Ready for Review</inlineHelpText>
    <label>Time taken to Ready for Review (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>