force-app/main/default/objects/Analytics_Model__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <description>EDS-3626 - Combination of Account and Opportunity Scores.</description>
    <formula>Account__r.Scorecard_Score__c + Opportunity__r.Scorecard_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>