force-app/main/default/objects/Analytics_Model__c/fields/Use_case_description_prime_PHS_etc__c.field-meta.xml
<CustomField>
    <fullName>Use_case_description_prime_PHS_etc__c</fullName>
    <label>Use case description (prime, PHS, etc)</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>