force-app/main/default/objects/Analytics_Model__c/fields/Value_of_Export_kWh__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Export_kWh__c</fullName>
    <label>Value of Export (%/kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>