force-app/main/default/objects/Analytics_Model__c/fields/Value_placed_on_resilience__c.field-meta.xml
<CustomField>
    <fullName>Value_placed_on_resilience__c</fullName>
    <label>Value placed on resilience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>