force-app/main/default/objects/Analytics_Model__c/fields/Value_placed_on_speed_to_power__c.field-meta.xml
<CustomField>
    <fullName>Value_placed_on_speed_to_power__c</fullName>
    <label>Value placed on speed to power</label>
    <length>100</length>
    <type>Text</type>
</CustomField>