force-app/main/default/objects/Analytics_Model__c/fields/What_will_unit_s_be_powering__c.field-meta.xml
<CustomField>
    <fullName>What_will_unit_s_be_powering__c</fullName>
    <label>What will unit(s) be powering?</label>
    <type>TextArea</type>
</CustomField>