force-app/main/default/objects/Analytics_Model__c/fields/Year_1_opex_savings_and__c.field-meta.xml
<CustomField>
    <fullName>Year_1_opex_savings_and__c</fullName>
    <label>Year 1 opex savings ($ and %)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>