force-app/main/default/objects/Analytics_Model__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Category__c</columns>
    <columns>Segment_Units__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Released,Dormant</value>
    </filters>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>notContain</operation>
        <value>Closed</value>
    </filters>
    <label>All</label>
</ListView>