force-app/main/default/objects/Analytics_Model__c/listViews/Dormant_and_Released.listView-meta.xml
<ListView>
    <fullName>Dormant_and_Released</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Released,Dormant</value>
    </filters>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>contains</operation>
        <value>Closed</value>
    </filters>
    <label>Dormant and Released</label>
</ListView>