force-app/main/default/objects/Analytics_Model__c/listViews/My_Analytics_Model_Requests.listView-meta.xml
<ListView>
    <fullName>My_Analytics_Model_Requests</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Model_Requests__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Analytics Model Requests</label>
</ListView>