force-app/main/default/objects/Analytics_Model__c/listViews/My_Assigned_Models.listView-meta.xml
<ListView>
    <fullName>My_Assigned_Models</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Priority__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Assigned Models</label>
</ListView>